app/assets/stylesheets/partials/projects.css.scss
// Project Colors
.project-color-red {
  background-color: #A63535;
}

.project-color-green {
  background-color: #5D9149;
}

.project-color-blue {
  background-color: #495D91;
}

.project-color-purple {
  background-color: #613C78;
}

.no-project-color {
  background-color: transparent;
  border: none;
}

// Project Images
.project-image-crime {
  background-image: image-url("projects/crime.jpg");
}

.project-image-titanic {
  background-image: image-url("projects/titanic.jpg");
}

.project-image-statricks {

}

.project-image-mightyhive {

}

.project-cover-darken-container {
  @include border-radius(3px);
}

.project-cover-image {
  background-size: cover;
  background-position: 0 0;
  @include border-radius(3px);
}

.project-cover-image {
  position: absolute;
  top: 0;
  left: 15px;
  right: 15px;
  bottom: 10px;
}

.project-cover-image-dark:after {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #000000;
  opacity: 0.4;
  content: " ";
}

// Project styles
.projects-container {
}

.project-card-container {
  margin-top: 15px;
}

.project-card {
  @include transition-ease-in-out(200ms);

  &.extra-large {
    height: 400px;
  }

  &.large {
    height: 350px;

    h1 {
      font-size: 24px;
    }
  }

  &.medium {
    height: 250px;

    h1 {
      font-size: 22px;
    }
  }

  &.small {
    height: 200px;

    h1 {
      font-size: 18px;
    }
  }

  &:hover {
    opacity: 0.9;
  }
}

.highlighted-project {
}

.featured-project-title {
  color: white;
}

.project-title-row {
  // Not sure why this is happening. It has a weird transition when it's in the
  // iPad-like screen size.
  @include breakpoint($ipad-screen) {
    width: 100%;
  }

  a {
    text-decoration: none;

    &:hover {
      text-decoration: none;
    }
  }
}

.project-card-colored {
  color: white;

  a {
    color: white;
  }
}

.project-card-inner {
  color: #333333;
}

.project-card-white {
  color: #333333;

  a {
    color: #333333;
  }
}

.project-col {
  @include breakpoint($small-screen) {
    float: left;
    width: 100%;
    display: block;
  }
}

.project-info-container {
  margin-top: -10px;
}

.project-info {
  text-align: center;
  margin-bottom: 50px;
}

.project-footer {
  position: absolute;
  left: 15px;
  right: 15px;
  bottom: 10px;

  padding: 10px;
}

